# model_car

./: .gitignore  copy2.sh
catkin_ws/src/odometry/: package.xml
catkin_ws_user/: test.sh
catkin_ws_user/src/autonomos_obstacle_msgs/: .arcconfig  .arclint  CHANGELOG.rst  CMakeLists.txt  README  nodelet_plugins.xml  package.xml
catkin_ws_user/src/autonomos_obstacle_msgs/launch/: ObjectVisualizer.launch
catkin_ws_user/src/autonomos_obstacle_msgs/msg/: Obstacle.msg  Obstacles.msg
catkin_ws_user/src/autonomos_obstacle_msgs/src/visualization/: MarkerFactory.h  ObstacleVisualizer.cpp  ObstacleVisualizer.h  main.cpp
catkin_ws_user/src/detect_roof_rectangles/: colors.txt
catkin_ws_user/src/dummy_pkg/: CMakeLists.txt  package.xml
catkin_ws_user/src/fub_controller/: CMakeLists.txt
catkin_ws_user/src/ideal_controller/: CMakeLists.txt  package.xml
catkin_ws_user/src/motion_planner/: CMakeLists.txt  README.md  package.xml  sample_nodelet.xml
catkin_ws_user/src/motion_planner/launch/: motion_planner.launch  mp_test.launch  planner.launch
catkin_ws_user/src/motion_planner/src/: CollisionCheck.cpp  CreateTraj.cpp  CreateTraj2.cpp  CreateTraj3.cpp  MotionPlanner.cpp  MotionPlanner.h  VehiclePath.cpp  VehiclePath.h  VehicleState.cpp  VehicleState.h  Vehicle_state.cpp  Vehicle_state.h  extra_code.cpp  motion_planner.cpp  motion_planner.h  polyfit.h  test_code.cpp  visualization.h
catkin_ws_user/src/motion_planner/src/unused/: CreateTraj1.cpp  CreateTraj2.cpp  extra_code.cpp  test_code.cpp
catkin_ws_user/src/mpc_control/: CMakeLists.txt  CMakeLists_new.txt  old_CMakeLists.txt  package.xml  questions.txt  readme.txt
catkin_ws_user/src/obstacle_publisher/: CMakeLists.txt  Readme.md  package.xml  sample_nodelet.xml
catkin_ws_user/src/obstacle_publisher/launch/: obstacle_publisher.launch
catkin_ws_user/src/obstacle_publisher/src/: ObstaclePublisher.cpp  ObstaclePublisher.h  VehiclePath.cpp  VehiclePath.h  xy_way_points.h
catkin_ws_user/src/odom_validation/: CMakeLists.txt  package.xml
catkin_ws_user/src/pid_control/: CMakeLists.txt  package.xml
catkin_ws_user/src/route_planner/: CMakeLists.txt  package.xml
catkin_ws_user/src/route_planner/launch/: route_planner.launch
catkin_ws_user/src/route_planner/src/: ref_cofe.py  rndf_1_way_loop.txt  rndf_1_way_simulator.txt  rndf_2_way_road.txt  rndf_custom_map_1_way.txt  rndf_map_1_wap_lab.txt  rndf_map_1_wap_lab_vgps_map.txt  rndf_path_pub.py  rndf_simulator_map_2way.txt  route_planner.py
ecl_lib/build_isolated/: catkin_make_isolated.cache
ecl_lib/build_isolated/ecl_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_command_line/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_concepts/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_config/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_console/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_containers/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_converters/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_converters_lite/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_core/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_devices/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_eigen/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_errors/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_exceptions/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_filesystem/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_formatters/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_io/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_ipc/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_license/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_linear_algebra/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
ecl_lib/build_isolated/ecl_lite/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_math/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_mpl/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_sigslots/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_sigslots_lite/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_streams/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_threads/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/build_isolated/ecl_time/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ecl_lib/devel/: .catkin  .rosinstall  setup.sh
ecl_lib/src/: README.md
(+1082 files in other folders)
