<?xml version="1.0"?>
<package format="2">
	<name>autonomos_obstacle_msgs</name>
	<version>1.0.2</version>
	<description>Generic obstacle message and visualization</description>
	<maintainer email="support@autonomos-systems.de">Autonomos GmbH</maintainer>
	<author email="support@autonomos-systems.de">Autonomos GmbH</author>
	<license>proprietary</license>
	<url type="website">https://www.autonomos-systems.de/</url>


	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>autonomos_cmake</build_depend>
	<!--build_depend>autonomos_common_types</build_depend-->
	<build_depend>message_generation</build_depend>

	<depend>geometry_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>nodelet</depend>
	<depend>std_msgs</depend>
	<depend>visualization_msgs</depend>

	<exec_depend>message_runtime</exec_depend>

	<export>
		<nodelet plugin="${prefix}/nodelet_plugins.xml" />
	</export>
</package>
