<?xml version="1.0"?>
<package>
  <name>motion_planner</name>
  <version>0.1.0</version>
  <description>trajectory planner for model car</description>

  <maintainer email="pradeepkorivi@gmail.com">Pradeep Korivi</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/cryborg21/sample_nodelet</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>

  <export>
    <nodelet plugin="${prefix}/sample_nodelet.xml" />
  </export>
</package>
