<?xml version="1.0"?>
<package>
  <name>obstacle_publisher</name>
  <version>0.1.0</version>
  <description>obstacle publisher for model car</description>

  <maintainer email="pradeepkorivi@gmail.com">Pradeep Korivi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>autonomos_obstacle_msgs</build_depend>
  <build_depend>ecl_geometry</build_depend>
  <run_depend>ecl_geometry</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>autonomos_obstacle_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/sample_nodelet.xml" />
  </export>
</package>
